--- a/pepeizqs deals web/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "ForgotPassword.String1");
 }
 
-@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.ContraseñaOlvidada>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
+@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.ContrasenaOlvidada>(RenderMode.ServerPrerendered, new { idioma = @Model.idioma }))
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
