--- a/pepeizqs deals web/Areas/Identity/Pages/Account/ResetPassword.cshtml
+++ b/pepeizqs deals web/Areas/Identity/Pages/Account/ResetPassword.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = Herramientas.Idiomas.CogerCadena(Model.idioma, "ResetPassword.String1");
 }
 
-@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.ContraseñaResetear>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, codigo = Model.codigo }))
+@(await Html.RenderComponentAsync<pepeizqs_deals_web.Areas.Identity.Componentes.ContrasenaResetear>(RenderMode.ServerPrerendered, new { idioma = Model.idioma, codigo = Model.codigo }))
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
