--- a/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Gratis.razor
@@ -16,7 +16,7 @@
 						@foreach (var juego in juegosBuscador)
 						{
 							<div class="perfil-flexible-centrado perfil-espacio-top">
-								<button @onclick="@(e => ClickearJuego(e, @juego.Id.ToString(), @juego.Nombre, juego.Imagenes.Library_600x900))" class="boton-pequeño" style="text-align:center;">
+								<button @onclick="@(e => ClickearJuego(e, juego.Id.ToString(), juego.Nombre, juego.Imagenes.Library_600x900, juego.Imagenes.Header_460x215))" class="boton-pequeño" style="text-align:center;">
 									<div class="perfil-flexible-centrado">
 										<div style="width: 12%;">
 											<img src="@juego.Imagenes.Capsule_231x87" style="max-height:100%; max-width:100%;" />
@@ -123,13 +123,14 @@
 		}
 	}
 
-	private void ClickearJuego(MouseEventArgs e, string id, string nombre, string imagen)
+	private void ClickearJuego(MouseEventArgs e, string id, string nombre, string imagenVertical, string imagenNoticia2)
 	{
 		juegosBuscador = new List<Juegos.Juego>();
 
 		idSeleccionada = id;
 		nombreSeleccionado = nombre;
-		imagenSeleccionada = imagen;
+		imagenSeleccionada = imagenVertical;
+		imagenNoticia = imagenNoticia2;
 	}
 
 	private void CambiarGratis(ChangeEventArgs texto)
