--- a/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Noticias.razor
@@ -81,7 +81,7 @@
 								}
 							}
 
-							<img src="@Gratis2.GratisCargar.DevolverGratis(gratis.Tipo).Imagen" style="width: 12%; margin: 10px;" />
+							<img src="@Gratis2.GratisCargar.DevolverGratis(gratis.Tipo).ImagenLogo" style="width: 12%; margin: 10px;" />
 							<div style="margin-left: 20px;">@gratis.Nombre</div>
 						</div>
 					</button>
@@ -124,7 +124,7 @@
 								}
 							}
 
-							<img src="@Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcion.Tipo).Imagen" style="width: 12%; margin: 10px;" />
+							<img src="@Suscripciones2.SuscripcionesCargar.DevolverSuscripcion(suscripcion.Tipo).ImagenLogo" style="width: 12%; margin: 10px;" />
 							<div style="margin-left: 20px;">@suscripcion.Nombre</div>
 						</div>
 					</button>
