--- a/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Suscripciones.razor
@@ -12,7 +12,7 @@
 
 		<div style="display: flex; align-items: start;">
 			<div class="perfil" style="width: 20%;">
-				<img src="@suscripcion.Imagen" />
+				<img src="@suscripcion.ImagenLogo" />
 			</div>
 
 			<div class="perfil" style="width: 80%; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
@@ -50,7 +50,7 @@
 
 		<div style="display: flex; align-items: start;">
 			<div class="perfil" style="width: 20%;">
-				<img src="@suscripcion.Imagen" />
+				<img src="@suscripcion.ImagenLogo" />
 			</div>
 
 			<div class="perfil" style="width: 80%;">				
