--- a/pepeizqs deals web/Pages/Contact.cshtml
+++ b/pepeizqs deals web/Pages/Contact.cshtml
@@ -19,7 +19,7 @@
 	</div>	
 </div>
 
-<div class="perfil" style="margin-bottom: 40px;">
+<div class="perfil" style="margin-top: 30px; margin-bottom: 40px;">
 	@Herramientas.Idiomas.CogerCadena(Model.idioma, "Contact.String2")
 	admin@pepeizqdeals.com
 </div>
