--- a/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Deseados.razor
@@ -99,9 +99,9 @@
 
 	private int cantidad = 0;
 
-	protected override async Task OnInitializedAsync()
+	protected override void OnInitialized()
 	{
-		usuario = await UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User);
+		usuario = UserManager.GetUserAsync(HttpContextAccessor.HttpContext.User).Result;
 
 		if (usuario != null)
 		{
@@ -121,7 +121,7 @@
 
 			if (tiempo == true)
 			{
-				SteamUsuario datos = await Cuenta.CargarDatos(usuario.SteamAccount);
+				SteamUsuario datos = Cuenta.CargarDatos(usuario.SteamAccount).Result;
 
 				usuario.SteamGames = datos.Juegos;
 				usuario.SteamWishlist = datos.Deseados;
@@ -130,7 +130,7 @@
 				usuario.SteamAccountLastCheck = DateTime.Now.ToString();
 				usuario.OfficialGroup = datos.GrupoOficial;
 
-				await UserManager.UpdateAsync(usuario);
+				var terminado = UserManager.UpdateAsync(usuario).IsCompleted;
 			}
 
 			#endregion
@@ -224,7 +224,7 @@
 					{
 						Juegos.Juego nuevoJuego = juego;
 						nuevoJuego.PrecioActualesTiendas = ordenados;
-						nuevoJuego.Imagenes.Capsule_231x87 = await Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.Id.ToString(), "capsule_231x87", dominio);
+						nuevoJuego.Imagenes.Capsule_231x87 = Herramientas.Imagenes.DescargarYGuardar(juego.Imagenes.Capsule_231x87, "juegos", juego.Id.ToString(), "capsule_231x87", dominio).Result;
 
 						JuegoDeseadoMostrar nuevoDeseado = new JuegoDeseadoMostrar();
 						nuevoDeseado.Juego = nuevoJuego;
