--- a/pepeizqs deals web/Pages/Shared/_Layout.cshtml
+++ b/pepeizqs deals web/Pages/Shared/_Layout.cshtml
@@ -104,12 +104,15 @@
                             {
                                 <li class="nav-item" style="margin-right: 30px;">
                                     <div class="menu-dropdown">
-                                        <button class="texto-cabecera" style="margin: 0px; border: 0px; color: var(--colorTextoVisitado); line-height: 20px;">Admin</button>
+                                        <button class="texto-cabecera" style="margin: 0px; border: 0px; color: var(--colorTextoVisitado); line-height: 20px;">Admin @Herramientas.Correos.ComprobarNuevosCorreos().ToString()</button>
                                         <div class="menu-dropdown-contenido">
+                                            <a class="texto-cabecera menu-dropdown-item" href="https://win6052.site4now.net/stats/awstats.pl?config=1112749300&h=8d43503475c9993340908170c2f4b9da">Visitas</a>
+                                            <a class="texto-cabecera menu-dropdown-item" href="https://mail5017.site4now.net/interface/root#/email">Correo</a>
+                                            <hr/>
                                             <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Juegos/Añadir">Añadir Juego</a>
                                             <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Tiendas">Tiendas</a>
                                             <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Pendientes">Pendientes</a>
-                                            <hr>
+                                            <hr/>
                                             <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Noticias">Noticias</a>
                                             <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Bundles">Bundles</a>
                                             <a class="texto-cabecera menu-dropdown-item" href="https://beta.pepeizqdeals.com/Admin/Gratis">Gratis</a>
